limpeza do codigo pt3

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (1).jpg" width="90" height="90"
+                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (2).jpg" width="90" height="90"
                   alt="Facial & Face Wash" class="img-cover">
               </figure>
 
@@ -681,7 +681,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/lugar.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="./assets/images/entrada.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
 
@@ -692,28 +692,28 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/galeradocurso.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
-                class="img-cover">
-            </figure>
-
-          </div>
-        </li>
-
-        <li>
-          <div class="gallery-card">
-
-            <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/horario.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="./assets/images/workshop.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
 
           </div>
         </li>
+
         <li>
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/ESTHEVAN_BRONDS-42.JPG" width="422" height="550" loading="lazy"
+              <img src="./assets/images/horario2.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                class="img-cover">
+            </figure>
+
+          </div>
+        </li>
+        <li>
+          <div class="gallery-card">
+
+            <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
+              <img src="./assets/images/galeriaCorteEsthevan.jpg" width="422" height="550" loading="lazy"
                 alt="Hair Cutting" class="img-cover">
             </figure>
           </div>
@@ -722,7 +722,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/ESTHEVAN_BRONDS-19.JPG" width="422" height="550" loading="lazy"
+              <img src="./assets/images/galeriaWorkshopEsthevan.jpg" width="422" height="550" loading="lazy"
                 alt="Hair Cutting" class="img-cover">
             </figure>
           </div>
@@ -740,7 +740,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/6BFC13BE-0270-427D-B338-715F535F610F.JPG" width="422" height="550"
+              <img src="./assets/images/corteEsthevan.jpg" width="422" height="550"
                 loading="lazy" alt="Hair Cutting" class="img-cover">
             </figure>
           </div>
@@ -751,7 +751,7 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="/assets/images/card.JPG" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              <img src="/assets/images/tapete.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
                 class="img-cover">
             </figure>
           </div>
