--- a/index.html
+++ b/index.html
@@ -212,10 +212,9 @@
   <section class="section service" id="services" aria-label="services">
     <div class="container">
 
-      <h2 class="h2 section-title text-center">Serviços que oferecemos</h2>
+      <h2 class="h2 section-title text-center">Serviços </h2>
 
       <p class="section-text text-center">
-        Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt labore dolore magna aliqua suspendisse
       </p>
 
       <ul class="grid-list">
@@ -232,7 +231,6 @@
             </h3>
 
             <p class="card-text">
-              Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
             <a href="#pricing" class="card-btn" aria-label="more">
@@ -254,7 +252,6 @@
             </h3>
 
             <p class="card-text">
-              Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
             <a href="#pricing" class="card-btn" aria-label="more">
@@ -276,7 +273,6 @@
             </h3>
 
             <p class="card-text">
-              Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
             <a href="#pricing" class="card-btn" aria-label="more">
@@ -298,8 +294,8 @@
             </h3>
 
             <p class="card-text">
-              Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
+            
 
             <a href="#pricing" class="card-btn" aria-label="more">
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -320,7 +316,6 @@
             </h3>
 
             <p class="card-text">
-              Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </p>
 
             <a href="#visagismoDs" class="card-btn" aria-label="more">
@@ -342,8 +337,7 @@
               <a href="#" class="card-title">Workshops</a>
             </h3>
 
-            <p class="card-text">
-              Sit amet consectetur adipisci elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <p class="card-text"> 
             </p>
 
             <a href="#workshopDs" class="card-btn" aria-label="more">
