--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 
   <!-- 
     - google font link
-  -->=
+  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Rubik:wght@300,400;700&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@600&family=Source+Serif+4:opsz@8..60&display=swap"
     rel="stylesheet">
 
   <!-- 
@@ -138,11 +141,15 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#gallery" class="navbar-link" data-nav-link>Galeria</a>
+              <a href="#workshopDs" class="navbar-link" data-nav-link>Workshop</a>
             </li>
 
             <li class="navbar-item">
-              <a href="#workshopDs" class="navbar-link" data-nav-link>Workshop</a>
+              <a href="#workshopDs" class="navbar-link" data-nav-link>Cursos</a>
+            </li>
+
+            <li class="navbar-item">
+              <a href="#gallery" class="navbar-link" data-nav-link>Galeria</a>
             </li>
 
             <li class="navbar-item">
@@ -185,7 +192,7 @@
         style="background-image: url('./assets/images/terno.JPG')">
         <div class="container">
 
-          <h1 class="h1 hero-title">Brond's Barbearia</h1>
+          <h1 class="h1  hero-font hero-title">Brond's Barbearia</h1>
 
           <p class="hero-text">
             Procura uma barbearia de confianca e com otimos profissionais? Conheca a Brond's Barbearia!
@@ -212,7 +219,7 @@
   <section class="section service" id="services" aria-label="services">
     <div class="container">
 
-      <h2 class="h2 section-title text-center">Serviços</h2>
+      <h2 class="h2 color-title section-title text-center">Serviços</h2>
 
       <p class="section-text text-center">
       </p>
@@ -295,7 +302,7 @@
 
             <p class="card-text">
             </p>
-            
+
 
             <a href="#pricing" class="card-btn" aria-label="more">
               <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -337,7 +344,7 @@
               <a href="#" class="card-title">Workshops</a>
             </h3>
 
-            <p class="card-text"> 
+            <p class="card-text">
             </p>
 
             <a href="#workshopDs" class="card-btn" aria-label="more">
@@ -453,8 +460,8 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/ESTHEVAN_BRONDS-51 (1) (1).jpg" width="90" height="90" alt="Shaving & Facial"
-                  class="img-cover">
+                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (1) (1).jpg" width="90" height="90"
+                  alt="Shaving & Facial" class="img-cover">
               </figure>
 
               <div class="wrapper">
@@ -529,7 +536,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (2).jpg" width="90" height="90"
+                <img src="./assets/images/11F2BDF3-7E20-446F-9945-7C9F380990A0 (1).jpg" width="90" height="90"
                   alt="Facial & Face Wash" class="img-cover">
               </figure>
 
@@ -548,7 +555,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
-                <img src="./assets/images/67311429-645A-46EA-B883-5A0344606258 (1) (2).jpg" width="90" height="90"
+                <img src="./assets/images/WhatsApp Image 2023-10-09 at 14.48.12.jpg" width="90" height="90"
                   alt="Backbone Massage" class="img-cover">
               </figure>
 
@@ -567,8 +574,8 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/pricing-8.jpg" width="90" height="90" alt="Meditation & Massage"
-                  class="img-cover">
+                <img src="./assets/images/WhatsApp Image 2023-10-09 at 12.53.21.jpg" width="90" height="90"
+                  alt="Meditation & Massage" class="img-cover">
               </figure>
 
               <div class="wrapper">
@@ -592,10 +599,10 @@
 
   <!-- visagismo -->
 
-  <section class="section gallery" id="visagismoDs" aria-label="photo gallery">
+  <section class="section " id="visagismoDs" aria-label="photo gallery">
 
     <div class="title-wrapper">
-      <h2 class="h2 section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
+      <h2 class="h2 color-title section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
     </div>
     <div class="content">
       <div class="visagismo_content container">
@@ -650,6 +657,56 @@
 
 
 
+  <!-- cursos -->
+
+  <section class="cursosP " id="visagismoDs" aria-label="photo gallery">
+
+    <div class="headerCursos">
+      <img class="logoCursos" src="/assets/images/Design sem nome (2).png" alt="">
+      <h1 class=" h2  color-title titleCursos"> Explore Nossos Cursos</h1>
+    </div>
+
+    <div class="content">
+      <div class="visagismo_content container">
+        <div class="text-container">
+          <p class="section-text">Seja um Barbeiro Profissional em Apenas 15 Dias!
+
+            Você sonha em dominar a arte da barbearia e entrar no mundo emocionante da beleza masculina? Nosso curso
+            intensivo de barbeiro é a oportunidade perfeita para você! Com a orientação de instrutores experientes e um
+            programa abrangente, você aprenderá as técnicas essenciais de cortes de cabelo, barba e cuidados com a pele
+            em apenas duas semanas.
+
+            Nossas aulas práticas e teóricas fornecerão o conhecimento e as habilidades necessárias para se destacar
+            nessa profissão em crescimento. Não perca a chance de iniciar uma carreira emocionante e lucrativa como
+            barbeiro. Inscreva-se agora e transforme seu futuro em apenas 15 dias!
+        </div>
+        </p>
+        <div class="image-container">
+          <figure class="imgContainer" style="--width: 300; --height: 550;">
+            <img src="./assets/images/barbeiro15Dias.jpeg" id="imgesth" width="422" height="550" loading="lazy"
+              alt="Hair Cutting" class="foto_mobile">
+          </figure>
+        </div>
+
+      </div>
+      <div class="visagismo_content2">
+        <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20cursos%20"
+          class="btn has-before">
+          <span class="span">Saiba Mais Sobre Os Cursos Disponiveis</span>
+
+          <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+        </a>
+      </div>
+    </div>
+
+  </section>
+
+
+
+
+
+
+
 
   <!-- 
         - #Galeria de fotos
@@ -661,7 +718,7 @@
       <div class="title-wrapper">
 
         <div>
-          <h2 class="h2 section-title">Galeria de Fotos</h2>
+          <h2 class="h2 section-title title-gallery">Galeria de Fotos</h2>
 
 
         </div>
@@ -734,8 +791,8 @@
           <div class="gallery-card">
 
             <figure class="card-banner img-holder" style="--width: 422; --height: 550;">
-              <img src="./assets/images/corteEsthevan.jpg" width="422" height="550"
-                loading="lazy" alt="Hair Cutting" class="img-cover">
+              <img src="./assets/images/corteEsthevan.jpg" width="422" height="550" loading="lazy" alt="Hair Cutting"
+                class="img-cover">
             </figure>
           </div>
         </li>
