mudanca css curso

--- a/index.html
+++ b/index.html
@@ -661,13 +661,13 @@
 
   <section class="cursosP " id="visagismoDs" aria-label="photo gallery">
 
-    <div class="headerCursos">
+    <div class="headerCursos container">
       <img class="logoCursos" src="/assets/images/Design sem nome (2).png" alt="">
       <h1 class=" h2  color-title titleCursos"> Explore Nossos Cursos</h1>
     </div>
 
     <div class="content">
-      <div class="visagismo_content container">
+      <div class="curso_content container">
         <div class="text-container">
           <p class="section-text">Seja um Barbeiro Profissional em Apenas 15 Dias!
 
