--- a/index.html
+++ b/index.html
@@ -698,8 +698,45 @@
         </a>
       </div>
     </div>
+    </section>
+    <section class="secondCurso">
+  <div class="container">
+    <div class="title-wrapper">
+      <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
+    </div>
+  </div>
+    <div class="content">
+      <div class="visagismo_content container">
+        <div class="text-container">
+          <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
+            revelar a essência
+            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
+            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
+            O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
+            revelar a essência
+        </div>
+        </p>
+        <div class="image-container">
+          <figure class="imgContainer" style="--width: 300; --height: 550;">
+            <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              class="foto_mobile">
+          </figure>
+        </div>
+
+      </div>
+      <div class="visagismo_content2">
+        <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20consultoria%20de%20Visagismo"
+          class="btn has-before">
+          <span class="span">Saiba Mais Sobre o Curso De Visagismo</span>
+
+          <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+        </a>
+      </div>
+    </div>
 
   </section>
+
+
 
 
 
