--- a/index.html
+++ b/index.html
@@ -689,14 +689,14 @@
         </div>
 
       </div>
-      <div class="visagismo_content2">
+      <!-- <div class="visagismo_content2">
         <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20cursos%20"
           class="btn has-before">
           <span class="span">Saiba Mais Sobre Os Cursos Disponiveis</span>
 
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
         </a>
-      </div>
+      </div> -->
     </div>
     </section>
     <section class="secondCurso">
@@ -725,9 +725,9 @@
 
       </div>
       <div class="visagismo_content2">
-        <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20consultoria%20de%20Visagismo"
+        <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20cursos%20"
           class="btn has-before">
-          <span class="span">Saiba Mais Sobre o Curso De Visagismo</span>
+          <span class="span">Saiba Mais Sobre Os Cursos Disponiveis</span>
 
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
         </a>
