--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 
 
   <section>
-    <h2 class="titleWorkshop">workshop </h2>
+    <h2 class="titleWorkshop">WORKSHOP</h2>
     <div id="workshopDs">
       <iframe id="myVideo" src="https://www.youtube.com/embed/xXuDMMDU2r4" frameborder="0"></iframe>
     </div>
