--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       -->
 
       <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-        style="background-image: url('./assets/images/terno.JPG')">
+        style="background-image: url('./assets/images/esthevanDeTerninho.jpg)">
         <div class="container">
 
           <h1 class="h1  hero-font hero-title">Brond's Barbearia</h1>
@@ -368,7 +368,7 @@
       -->
 
   <section class="section pricing has-bg-image has-before" aria-label="pricing"
-    style="background-image: url('./assets/images/pricing-bg.jpg')">
+    style="background-image: url'(./assets/images/pricing-bg.jpg')">
     <div class="container" id="pricing">
 
       <h2 class="h2 section-title text-center">Planos e preços</h2>
@@ -479,7 +479,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/ESTHEVAN_BRONDS-58 (1).jpg" width="90" height="90" alt="Hair Color & Wash"
+                <img src="./assets/images/cortePrecoEsthevan.jpg" width="90" height="90" alt="Hair Color & Wash"
                   class="img-cover">
               </figure>
 
@@ -555,7 +555,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
-                <img src="./assets/images/WhatsApp Image 2023-10-09 at 14.48.12.jpg" width="90" height="90"
+                <img src="./assets/images/logovVisagismoWhite.jpg" width="90" height="90"
                   alt="Backbone Massage" class="img-cover">
               </figure>
 
