--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         - #HERO
       -->
 
-      <section class="section hero has-before has-bg-image" id="home" aria-label="home"
-        style="background-image: url('./assets/images/esthevanDeTerninho.jpg)">
+      <section class="backgroundImg section hero has-before has-bg-image" id="home" aria-label="home">
+
         <div class="container">
 
           <h1 class="h1  hero-font hero-title">Brond's Barbearia</h1>
@@ -367,10 +367,8 @@
         - #Preços
       -->
 
-  <section class="section pricing has-bg-image has-before" aria-label="pricing"
-    style="background-image: url'(./assets/images/pricing-bg.jpg')">
+  <section class="section pricing has-bg-image has-before" aria-label="pricing">
     <div class="container" id="pricing">
-
       <h2 class="h2 section-title text-center">Planos e preços</h2>
 
       <p class="section-text text-center">
@@ -555,8 +553,8 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
-                <img src="./assets/images/logovVisagismoWhite.jpg" width="90" height="90"
-                  alt="Backbone Massage" class="img-cover">
+                <img src="./assets/images/logovVisagismoWhite.jpg" width="90" height="90" alt="Backbone Massage"
+                  class="img-cover">
               </figure>
 
               <div class="wrapper">
@@ -574,7 +572,7 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/WhatsApp Image 2023-10-09 at 12.53.21.jpg" width="90" height="90"
+                <img src="./assets/images/quimica.jpg" width="90" height="90"
                   alt="Meditation & Massage" class="img-cover">
               </figure>
 
@@ -617,7 +615,7 @@
         </p>
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
+            <img src="./assets/images/ESTHEVAN_BRONDS-58 (1).JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
               class="foto_mobile">
           </figure>
         </div>
@@ -698,13 +696,13 @@
         </a>
       </div> -->
     </div>
-    </section>
-    <section class="secondCurso">
-  <div class="container">
-    <div class="title-wrapper">
-      <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
+  </section>
+  <section class="secondCurso">
+    <div class="container">
+      <div class="title-wrapper">
+        <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
+      </div>
     </div>
-  </div>
     <div class="content">
       <div class="visagismo_content container">
         <div class="text-container">
@@ -718,8 +716,8 @@
         </p>
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
-              class="foto_mobile">
+            <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy"
+              alt="Hair Cutting" class="foto_mobile">
           </figure>
         </div>
 
