curso visagismo atualizacao

--- a/index.html
+++ b/index.html
@@ -446,10 +446,10 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Barba com Esthevan</h3>
 
-                <p class="card-text">30-40 minutes</p>
+                <p class="card-text">30-40 minutos</p>
               </div>
 
-              <data class="card-price" value="60">R$40</data>
+              <data class="card-price" value="60">R$55</data>
 
             </div>
           </li>
@@ -465,10 +465,10 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Barba</h3>
 
-                <p class="card-text">30-40 minutes</p>
+                <p class="card-text">30-40 minutos</p>
               </div>
 
-              <data class="card-price" value="80">R$30</data>
+              <data class="card-price" value="80">R$45</data>
 
             </div>
           </li>
@@ -484,10 +484,10 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Corte com o Esthevan</h3>
 
-                <p class="card-text"> 30-40 minutes</p>
+                <p class="card-text"> 30-40 minutos</p>
               </div>
 
-              <data class="card-price" value="55">R$55</data>
+              <data class="card-price" value="55">R$60</data>
 
             </div>
           </li>
@@ -503,7 +503,7 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Corte</h3>
 
-                <p class="card-text">30-40 minutes</p>
+                <p class="card-text">30-40 minutos</p>
               </div>
 
               <data class="card-price" value="56">R$50</data>
@@ -522,10 +522,10 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Cabelo + Barba com o Esthevan</h3>
 
-                <p class="card-text">Clean & simple 30-40 minutes</p>
+                <p class="card-text"> 1:00 hora</p>
               </div>
 
-              <data class="card-price" value="350">R$90</data>
+              <data class="card-price" value="350">R$95</data>
 
             </div>
           </li>
@@ -541,7 +541,7 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Cabelo + Barba</h3>
 
-                <p class="card-text">Clean & simple 30-40 minutes</p>
+                <p class="card-text">  1:00 hora</p>
               </div>
 
               <data class="card-price" value="75">R$80</data>
@@ -560,7 +560,7 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Visagismo</h3>
 
-                <p class="card-text">1:00-1:30 horas</p>
+                <p class="card-text">1:30-2:00 horas</p>
               </div>
 
               <data class="card-price" value="43">R$350</data>
@@ -572,14 +572,14 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 90; --height: 90;">
-                <img src="./assets/images/quimica.jpg" width="90" height="90"
-                  alt="Meditation & Massage" class="img-cover">
+                <img src="./assets/images/quimica.jpg" width="90" height="90" alt="Meditation & Massage"
+                  class="img-cover">
               </figure>
 
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Selagem + Luzes</h3>
 
-                <p class="card-text">Clean & simple 30-40 minutes</p>
+                <p class="card-text">1:30-2:00 horas</p>
               </div>
 
               <data class="card-price" value="105">R$150</data>
@@ -605,18 +605,23 @@
     <div class="content">
       <div class="visagismo_content container">
         <div class="text-container">
-          <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-            revelar a essência
-            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-            O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-            revelar a essência
+          <p class="section-text">Visagismo é a técnica de análise da aparência
+            física de uma pessoa, estudando suas
+            características e expressões para criar uma
+            aparência harmônica e adequada ao seu estilo e
+            personalidade, utilizando o corte de cabelo, a
+            maquiagem, as cores e o estilo de vestimenta
+            para isso. O visagista busca proporcionar uma
+            mudança positiva na autoestima e
+            autoconfiança do cliente, valorizando sua
+            beleza natural e respeitando suas preferências
+            estéticas.
         </div>
         </p>
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/ESTHEVAN_BRONDS-58 (1).JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
-              class="foto_mobile">
+            <img src="./assets/images/ESTHEVAN_BRONDS-58 (1).JPG" id="imgesth" width="422" height="550" loading="lazy"
+              alt="Hair Cutting" class="foto_mobile">
           </figure>
         </div>
 
@@ -706,12 +711,38 @@
     <div class="content">
       <div class="visagismo_content container">
         <div class="text-container">
-          <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-            revelar a essência
-            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-            O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-            revelar a essência
+          <p class="section-text">Visagismo é a técnica de análise da aparência
+            física de uma pessoa, estudando suas
+            características e expressões para criar uma
+            aparência harmônica e adequada ao seu estilo e
+            personalidade, utilizando o corte de cabelo, a
+            maquiagem, as cores e o estilo de vestimenta
+            para isso. O visagista busca proporcionar uma
+            mudança positiva na autoestima e
+            autoconfiança do cliente, valorizando sua
+            beleza natural e respeitando suas preferências
+            estéticas.
+            Hoje em dia, a imagem pessoal é
+            extremamente importante. As pessoas
+            formam conceitos sobre você a partir de
+            sua aparência, principalmente do seu
+            cabelo. Por isso, é fundamental transmitir a
+            imagem que deseja. Já aconteceu de você
+            não gostar do corte de cabelo depois de
+            sair do barbeiro ou cabeleireiro, mas não
+            conseguir explicar o motivo?
+            Provavelmente, o profissional não levou
+            em consideração sua identidade e
+            personalidade na hora de cortar. O corte
+            de cabelo fala muito sobre quem somos e,
+            portanto, é preciso valorizar nossas
+            características, inclusive no ambiente de
+            trabalho. Uma mudança simples na
+            imagem pode mudar completamente
+            como as pessoas nos veem. O curso
+            ajudará a chegar na imagem que seu
+            cliente deseja transmitir de forma efetiva
+            e simplificada.
         </div>
         </p>
         <div class="image-container">
