--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </li>
 
             <li class="navbar-item">
-              <a href="#workshopDs" class="navbar-link" data-nav-link>Cursos</a>
+              <a href="#cursoDs" class="navbar-link" data-nav-link>Cursos</a>
             </li>
 
             <li class="navbar-item">
@@ -661,8 +661,8 @@
 
 
   <!-- cursos -->
-
-  <section class="cursosP " id="visagismoDs" aria-label="photo gallery">
+  <div id="cursoDs"></div>
+  <section class="cursosP "  aria-label="photo gallery">
 
     <div class="headerCursos container">
       <img class="logoCursos" src="/assets/images/Design sem nome (2).png" alt="">
