--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
         - #Preços
       -->
 
-  <section class="section pricing has-bg-image has-before" aria-label="pricing"
-    style="background-image: url'(./assets/images/pricing-bg.jpg')">
+  <section class="section pricing pricing-img has-bg-image has-before" aria-label="pricing"
+    style="background-image: url '(./assets/images/pricing-bg.jpg')">
     <div class="container" id="pricing">
 
       <h2 class="h2 section-title text-center">Planos e preços</h2>
@@ -555,8 +555,8 @@
             <div class="pricing-card">
 
               <figure class="card-banner img-holder" style="--width: 150; --height: 150;">
-                <img src="./assets/images/logovVisagismoWhite.jpg" width="90" height="90"
-                  alt="Backbone Massage" class="img-cover">
+                <img src="./assets/images/logovVisagismoWhite.jpg" width="90" height="90" alt="Backbone Massage"
+                  class="img-cover">
               </figure>
 
               <div class="wrapper">
@@ -698,13 +698,13 @@
         </a>
       </div> -->
     </div>
-    </section>
-    <section class="secondCurso">
-  <div class="container">
-    <div class="title-wrapper">
-      <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
+  </section>
+  <section class="secondCurso">
+    <div class="container">
+      <div class="title-wrapper">
+        <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
+      </div>
     </div>
-  </div>
     <div class="content">
       <div class="visagismo_content container">
         <div class="text-container">
@@ -718,8 +718,8 @@
         </p>
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
-            <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
-              class="foto_mobile">
+            <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy"
+              alt="Hair Cutting" class="foto_mobile">
           </figure>
         </div>
 
