atualizacao txt cursos

--- a/index.html
+++ b/index.html
@@ -364,9 +364,7 @@
         - #Preços
       -->
 
-  <<<<<<< HEAD <section class="section pricing pricing-img has-bg-image has-before" aria-label="pricing"=======<section
-    class="section pricing has-bg-image has-before" aria-label="pricing">>>>>>> refs/remotes/origin/main
-    style="background-image: url '(./assets/images/pricing-bg.jpg')">
+  <section class="section pricing pricing-img has-bg-image has-before" aria-label="pricing">
     <div class="container" id="pricing">
       <h2 class="h2 section-title text-center">Planos e preços</h2>
 
@@ -707,12 +705,37 @@
       <div class="content">
         <div class="visagismo_content container">
           <div class="text-container">
-            <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-              revelar a essência
-              única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-              personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-              O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-              revelar a essência
+            <p class="section-text">Visagismo é a técnica de análise da aparência
+              física de uma pessoa, estudando suas
+              características e expressões para criar uma
+              aparência harmônica e adequada ao seu estilo e
+              personalidade, utilizando o corte de cabelo, a
+              maquiagem, as cores e o estilo de vestimenta
+              para isso. O visagista busca proporcionar uma
+              mudança positiva na autoestima e
+              autoconfiança do cliente, valorizando sua
+              beleza natural e respeitando suas preferências
+              estéticas.Hoje em dia, a imagem pessoal é
+              extremamente importante. As pessoas
+              formam conceitos sobre você a partir de
+              sua aparência, principalmente do seu
+              cabelo. Por isso, é fundamental transmitir a
+              imagem que deseja. Já aconteceu de você
+              não gostar do corte de cabelo depois de
+              sair do barbeiro ou cabeleireiro, mas não
+              conseguir explicar o motivo?
+              Provavelmente, o profissional não levou
+              em consideração sua identidade e
+              personalidade na hora de cortar. O corte
+              de cabelo fala muito sobre quem somos e,
+              portanto, é preciso valorizar nossas
+              características, inclusive no ambiente de
+              trabalho. Uma mudança simples na
+              imagem pode mudar completamente
+              como as pessoas nos veem. O curso
+              ajudará a chegar na imagem que se u
+              cliente deseja transmitir de forma efetiva
+              e simplificada.
           </div>
           </p>
           <div class="image-container">
