projeto em fase de aprovação do cliente

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
               como as pessoas nos veem. O curso
               ajudará a chegar na imagem que se u
               cliente deseja transmitir de forma efetiva
-              e simplificada.
+              e simplificada.s
           </div>
           </p>
           <div class="image-container">
