projeto em fase de aprovação do cliente pt1

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     - primary meta tags
   -->
   <title>Brond's</title>
-  <meta name="title" content="Barber - Barbers & Hair Cutting">
+  <meta name="title" content="Bronds Barber ">
   <meta name="description" content="This is a barber html template made by Caio Messa & Matheus Fukase">
 
+
+  <!-- favicon -->
+
+  <link rel="shortcut icon" href="/assets/images/logoo.JPG" type="image/svg+xml">
   <!-- 
     - youtube
   -->
@@ -538,7 +542,7 @@
               <div class="wrapper">
                 <h3 class="h3 card-title colorFont">Cabelo + Barba</h3>
 
-                <p class="card-text">  1:00 hora</p>
+                <p class="card-text"> 1:00 hora</p>
               </div>
 
               <data class="card-price" value="75">R$80</data>
@@ -596,26 +600,26 @@
 
   <section class="section " id="visagismoDs" aria-label="photo gallery">
 
-      <div class="title-wrapper">
-        <h2 class="h2 color-title section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
-      </div>
-      <div class="content">
-        <div class="visagismo_content container">
-          <div class="text-container">
-            <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-              revelar a essência
-              única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-              personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-              O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-              revelar a essência
-          </div>
-          </p>
-          <div class="image-container">
-            <figure class="imgContainer" style="--width: 300; --height: 550;">
-              <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy"
-                alt="Hair Cutting" class="foto_mobile">
-            </figure>
-          </div>
+    <div class="title-wrapper">
+      <h2 class="h2 color-title section-title VISAGISMO">Descubra o Poder do Visagismo</h2>
+    </div>
+    <div class="content">
+      <div class="visagismo_content container">
+        <div class="text-container">
+          <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
+            revelar a essência
+            única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
+            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
+            O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
+            revelar a essência
+        </div>
+        </p>
+        <div class="image-container">
+          <figure class="imgContainer" style="--width: 300; --height: 550;">
+            <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
+              class="foto_mobile">
+          </figure>
+        </div>
 
       </div>
       <div class="visagismo_content2">
@@ -652,9 +656,9 @@
 
 
 
-    <!-- cursos -->
+  <!-- cursos -->
 
-    <section class="cursosP " id="visagismoDs" aria-label="photo gallery">
+  <section class="cursosP " id="visagismoDs" aria-label="photo gallery">
 
     <div class="headerCursos container">
       <img class="logoCursos" src="/assets/images/Design sem nome (2).png" alt="">
@@ -666,12 +670,12 @@
         <div class="text-container">
           <p class="section-text">Seja um Barbeiro Profissional em Apenas 15 Dias!
 
-              Você sonha em dominar a arte da barbearia e entrar no mundo emocionante da beleza masculina? Nosso curso
-              intensivo de barbeiro é a oportunidade perfeita para você! Com a orientação de instrutores experientes e
-              um
-              programa abrangente, você aprenderá as técnicas essenciais de cortes de cabelo, barba e cuidados com a
-              pele
-              em apenas duas semanas.
+            Você sonha em dominar a arte da barbearia e entrar no mundo emocionante da beleza masculina? Nosso curso
+            intensivo de barbeiro é a oportunidade perfeita para você! Com a orientação de instrutores experientes e
+            um
+            programa abrangente, você aprenderá as técnicas essenciais de cortes de cabelo, barba e cuidados com a
+            pele
+            em apenas duas semanas.
 
             Nossas aulas práticas e teóricas fornecerão o conhecimento e as habilidades necessárias para se destacar
             nessa profissão em crescimento. Não perca a chance de iniciar uma carreira emocionante e lucrativa como
@@ -694,56 +698,56 @@
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
         </a>
       </div> -->
+    </div>
+  </section>
+  <section class="secondCurso">
+    <div class="container">
+      <div class="title-wrapper">
+        <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
       </div>
-    </section>
-    <section class="secondCurso">
-      <div class="container">
-        <div class="title-wrapper">
-          <h2 class="h2 section-title color-titleCurso">Curso de Visagismo</h2>
+    </div>
+    <div class="content">
+      <div class="visagismo_content container">
+        <div class="text-container">
+          <p class="section-text">Visagismo é a técnica de análise da aparência
+            física de uma pessoa, estudando suas
+            características e expressões para criar uma
+            aparência harmônica e adequada ao seu estilo e
+            personalidade, utilizando o corte de cabelo, a
+            maquiagem, as cores e o estilo de vestimenta
+            para isso. O visagista busca proporcionar uma
+            mudança positiva na autoestima e
+            autoconfiança do cliente, valorizando sua
+            beleza natural e respeitando suas preferências
+            estéticas.Hoje em dia, a imagem pessoal é
+            extremamente importante. As pessoas
+            formam conceitos sobre você a partir de
+            sua aparência, principalmente do seu
+            cabelo. Por isso, é fundamental transmitir a
+            imagem que deseja. Já aconteceu de você
+            não gostar do corte de cabelo depois de
+            sair do barbeiro ou cabeleireiro, mas não
+            conseguir explicar o motivo?
+            Provavelmente, o profissional não levou
+            em consideração sua identidade e
+            personalidade na hora de cortar. O corte
+            de cabelo fala muito sobre quem somos e,
+            portanto, é preciso valorizar nossas
+            características, inclusive no ambiente de
+            trabalho. Uma mudança simples na
+            imagem pode mudar completamente
+            como as pessoas nos veem. O curso
+            ajudará a chegar na imagem que se u
+            cliente deseja transmitir de forma efetiva
+            e simplificada.s
         </div>
-      </div>
-      <div class="content">
-        <div class="visagismo_content container">
-          <div class="text-container">
-            <p class="section-text">Visagismo é a técnica de análise da aparência
-              física de uma pessoa, estudando suas
-              características e expressões para criar uma
-              aparência harmônica e adequada ao seu estilo e
-              personalidade, utilizando o corte de cabelo, a
-              maquiagem, as cores e o estilo de vestimenta
-              para isso. O visagista busca proporcionar uma
-              mudança positiva na autoestima e
-              autoconfiança do cliente, valorizando sua
-              beleza natural e respeitando suas preferências
-              estéticas.Hoje em dia, a imagem pessoal é
-              extremamente importante. As pessoas
-              formam conceitos sobre você a partir de
-              sua aparência, principalmente do seu
-              cabelo. Por isso, é fundamental transmitir a
-              imagem que deseja. Já aconteceu de você
-              não gostar do corte de cabelo depois de
-              sair do barbeiro ou cabeleireiro, mas não
-              conseguir explicar o motivo?
-              Provavelmente, o profissional não levou
-              em consideração sua identidade e
-              personalidade na hora de cortar. O corte
-              de cabelo fala muito sobre quem somos e,
-              portanto, é preciso valorizar nossas
-              características, inclusive no ambiente de
-              trabalho. Uma mudança simples na
-              imagem pode mudar completamente
-              como as pessoas nos veem. O curso
-              ajudará a chegar na imagem que se u
-              cliente deseja transmitir de forma efetiva
-              e simplificada.s
-          </div>
-          </p>
-          <div class="image-container">
-            <figure class="imgContainer" style="--width: 300; --height: 550;">
-              <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy"
-                alt="Hair Cutting" class="foto_mobile">
-            </figure>
-          </div>
+        </p>
+        <div class="image-container">
+          <figure class="imgContainer" style="--width: 300; --height: 550;">
+            <img src="./assets/images/cursoVisagismo.jpeg" id="imgesth" width="422" height="550" loading="lazy"
+              alt="Hair Cutting" class="foto_mobile">
+          </figure>
+        </div>
 
       </div>
       <div class="visagismo_content2">
