atualizacao logo fotter

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
   <title>Brond's</title>
   <meta name="title" content="Bronds Barber ">
-  <meta name="description" content="This is a barber html template made by Caio Messa & Matheus Fukase">
+  <meta name="description" content="This is Bronds Barbearia">
 
 
   <!-- favicon -->
@@ -895,7 +895,7 @@
             <div class="footer-brand">
 
               <a href="#" class="logo">
-                <img src="./assets/images/logoo.jpg">
+                <img src="./assets/images/logoo.JPG">
 
               </a>
 
