atualizacao txt footer

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                 <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
 
                 <address class="contact-link">
-                  Rua Engenheiro Isaac Garcez, 151, 09619-110, São Bernardo do Campo
+                  Rua Engenheiro Isaac Garcez, 151, 09619-110  São Bernardo do Campo
                 </address>
               </li>
 
