--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
           <h1 class="h1  hero-font hero-title">Brond's Barbearia</h1>
 
           <p class="hero-text">
-            Procura uma barbearia de confianca e com otimos profissionais? Conheca a Brond's Barbearia!
+            Procura uma barbearia de confiança e com ótimos profissionais? Conheça a Brond's Barbearia!
           </p>
 
           <a href="#services" class="btn has-before">
-            <span class="span">Explore nossos servicos</span>
+            <span class="span">Explore nossos serviços</span>
 
             <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
           </a>
@@ -373,7 +373,7 @@
       <h2 class="h2 section-title text-center">Planos e preços</h2>
 
       <p class="section-text text-center">
-        Para mais informacoes confira todos os detalhes pelo aplicativo de agendamento.
+        Para mais informações confira o aplicativo de agendamento ou chame a gente no whatsapp.
       </p>
 
       <div class="pricing-tab-container">
@@ -386,7 +386,7 @@
                 <i class="flaticon-medal" aria-hidden="true"></i>
               </div>
 
-              <p class="btn-text">Todos os precos</p>
+              <p class="btn-text">Todos os preços</p>
             </button>
           </li>
 
@@ -609,11 +609,9 @@
           <p class="section-text">O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
             revelar a essência
             única de cada pessoa. Essa abordagem personalizada considera suas características físicas, traços e
-            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra
-            O visagismo .O visagismo é mais do que uma simples técnica de beleza, é uma verdadeira arte de
-            revelar a essência
+            personalidade para criar uma imagem que reflete quem você é. Explore os segredos do visagismo e descubra-o
         </div>
-        </p>
+        </p> 
         <div class="image-container">
           <figure class="imgContainer" style="--width: 300; --height: 550;">
             <img src="./assets/images/terno.JPG" id="imgesth" width="422" height="550" loading="lazy" alt="Hair Cutting"
@@ -719,7 +717,7 @@
             mudança positiva na autoestima e
             autoconfiança do cliente, valorizando sua
             beleza natural e respeitando suas preferências
-            estéticas.Hoje em dia, a imagem pessoal é
+            estéticas. Hoje em dia, a imagem pessoal é
             extremamente importante. As pessoas
             formam conceitos sobre você a partir de
             sua aparência, principalmente do seu
@@ -753,7 +751,7 @@
       <div class="visagismo_content2">
         <a href="https://api.whatsapp.com/send?phone=5511933360954&text=Ol%C3%A1%20tudo%20bem%20?%20Gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es%20sobre%20os%20cursos%20"
           class="btn has-before">
-          <span class="span">Saiba Mais Sobre Os Cursos Disponiveis</span>
+          <span class="span">Saiba Mais Sobre Os Cursos Disponíveis</span>
 
           <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
         </a>
@@ -929,7 +927,7 @@
               <li class="footer-list-item">
                 <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
 
-                <span class="contact-link">Terça - Sabado, 9:00- 20:00</span>
+                <span class="contact-link">Terça - Sábado, 9:00- 20:00</span>
               </li>
 
               <li class="footer-list-item">
