--- a/index.html
+++ b/index.html
@@ -655,8 +655,8 @@
 
 
   <!-- cursos -->
-
-  <section class="cursosP " id="visagismoDs" aria-label="photo gallery">
+  <div id="cursoDs" ></div>
+  <section class="cursosP " aria-label="photo gallery">
 
     <div class="headerCursos container">
       <img class="logoCursos" src="/assets/images/Design sem nome (2).png" alt="">
