--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <li>
           <div class="service-card">
 
-            <div class="card-icon" id="cortes">
+            <div class="card-icon" >
               <i class="flaticon-salon"></i>
             </div>
 
